force-app/main/default/objects/HDT_ColumnsSecondLevel__mdt/HDT_ColumnsSecondLevel__mdt.object-meta.xml
<CustomObject>
    <label>Columns Second Level</label>
    <pluralLabel>Columns Second Level</pluralLabel>
</CustomObject>