force-app/main/default/objects/HDT_ColumnsSecondLevel__mdt/fields/FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieldType__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>text</fullName>
                <default>true</default>
                <label>text</label>
            </value>
            <value>
                <fullName>checkbox</fullName>
            </value>
            <value>
                <fullName>number</fullName>
            </value>
            <value>
                <fullName>date</fullName>
            </value>
            <value>
                <fullName>icon</fullName>
            </value>
            <value>
                <fullName>currency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>