force-app/main/default/objects/HDT_ColumnsSecondLevel__mdt/fields/InitialWidth__c.field-meta.xml
<CustomField>
    <fullName>InitialWidth__c</fullName>
    <label>Initial Width</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>