force-app/main/default/objects/HDT_ColumnsSecondLevel__mdt/fields/IsFilter__c.field-meta.xml
<CustomField>
    <fullName>IsFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Filter</label>
    <type>Checkbox</type>
</CustomField>