force-app/main/default/objects/HDT_ColumnsSecondLevel__mdt/fields/Tab__c.field-meta.xml
<CustomField>
    <fullName>Tab__c</fullName>
    <label>Tab</label>
    <referenceTo>HDT_TabConfiguration__mdt</referenceTo>
    <relationshipLabel>Columns Second Level</relationshipLabel>
    <relationshipName>ColumnsSecondLevel</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>